# lab2

./: CMakeLists.txt
working files/: Fwd.h  IWorker.h  ParseResult.h  Parser.cpp  Parser.h  Reader.cpp  Reader.h  WorkerDescriptor.h  WorkerFactory.cpp  WorkerFactory.h  WorkerFactoryCreator.cpp  WorkerFactoryCreator.h  WorkflowDescriptor.h  WorkflowExecutor.cpp  WorkflowExecutor.h  main.cpp
